<resources>
    <string name="app_name">BGMITournament Admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addPlayer">ADD PLAYER</string>
    <string name="createMatch">CREATE MATCH</string>
    <string name="uploadIdAndPass">UPLOAD ID/PASS</string>
    <string name="deleteIdAndPass">DELETE ID/PASS</string>
    <string name="enterDate">Enter Date</string>
    <string name="enterTime">Enter Time</string>
    <string name="GenerateReferenceId">Generate 5 Digit Reference Id</string>
    <string name="MatchCharge">Match Charge</string>
    <string name="MaxParticipants">Max Participants Seats</string>
    <string name="PositionsWisePrizes">Positions Wise Prizes</string>
    <string name="selectMatchTime">Select Match Time</string>
    <string name="selectMatchCategory">Select Match Category</string>

    <string name="warning1">Warning 1: Remember Reference id it willused for uploading id and password.</string>
    <string name="warning2">Warning 2: always use different reference id\'s otherwise there will be conflict in the system.</string>

    <string-array name="spMatchTimeEnteries">
        <item>Select Match Time</item>
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
    </string-array>

    <string-array name="spMatchCategoryEnteries">
        <item>Select Match Category</item>
        <item>Erangle</item>
        <item>Livik</item>
        <item>Miramar</item>
        <item>TDM</item>
    </string-array>

    <string name="chooseTicketImage">Choose Ticket Image</string>
    <string name="upload">Upload</string>
    <string name="uploadIdAndPassheading">Upload ID And PASS</string>
    <string name="enterRoomId">Enter ROOM ID</string>
    <string name="enterRoomPass">Enter ROOM Password</string>
    <string name="enterRefId">Enter Referenece ID</string>
    <string name="uploadIDPassNote">NOTE: Please enter the reference ID that you used while creating the match.</string>

    <string name="uploadDate">Upload Date</string>
    <string name="uploadTime">Upload Time</string>
    <string name="referenceID">Reference ID</string>
    <string name="slots">Slots</string>
    <string name="matchCategory">Match Category</string>
    <string name="matchDate">Match Date</string>
    <string name="matchTime">Match Time</string>
    <string name="roomId">Room ID</string>
    <string name="roomPass">Room Pass</string>
    <string name="mapName">Erangle Match</string>
    <string name="entryPrice">ENTRY PRICE: 10</string>
    <string name="delete">Delete</string>
</resources>