<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:elevation="20dp"
    android:clickable="true"
    android:focusable="true"
    tools:context=".fragments.upload.UploadIdAndPass">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:src="@drawable/gamepad"
                android:layout_gravity="center"
         />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:letterSpacing="0.07"
                android:text="@string/uploadIdAndPassheading"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="25sp"
/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etroomID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"

                android:layout_marginEnd="20dp"
                android:hint="@string/enterRoomId"
                android:textColorHint="@color/hintcolor"
                app:boxBackgroundColor="@color/editextbg"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:endIconTint="@color/hintcolor"
                app:hintEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etroomPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"

                android:layout_marginEnd="20dp"
                android:hint="@string/enterRoomPass"
                android:textColorHint="@color/hintcolor"
                app:boxBackgroundColor="@color/editextbg"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:endIconTint="@color/hintcolor"
                app:hintEnabled="true"
    >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etRefIdUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"

                android:layout_marginEnd="20dp"
                android:hint="@string/enterRefId"
                android:textColorHint="@color/hintcolor"
                app:boxBackgroundColor="@color/editextbg"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:endIconTint="@color/hintcolor"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="5"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                app:cardBackgroundColor="@color/cardBgColor"
                app:cardCornerRadius="10dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/uploadIDPassNote"
                    android:textColor="#EB455F"
                    android:textSize="16sp"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/poppins"
                    />
            </androidx.cardview.widget.CardView>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:entries="@array/spMatchTimeEnteries"
                android:gravity="center"
                android:spinnerMode="dropdown"
                android:textAlignment="center"
               
                />
            
            <android.widget.Button
                android:id="@+id/btnUploadIDPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rippleeffect"
                android:text="@string/upload"
                android:includeFontPadding="false"
                android:fontFamily="@font/poppins"
                android:elevation="10dp"
                android:textColor="@color/buttonTextColor"
                android:letterSpacing="0.07"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>